unpackaged/main/default/objects/Order_Erp__c/Order_Erp__c.object-meta.xml
<CustomObject>
    <description>This object cotains the orders from Xometry ERP. An order is created in Salesforce when the Order date is populated. 

Technical Note: Quote and Orders are the same object in the source system but seperated in Salesforce as Orders represent the end of the opportunity process.</description>
    <label>Order ERP</label>
    <nameField>
        <displayFormat>Order-{000000}</displayFormat>
        <label>Order Erp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders ERP</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>