unpackaged/main/default/objects/Order_Erp__c/fields/AcceptedJobValue__c.field-meta.xml
<CustomField>
    <fullName>AcceptedJobValue__c</fullName>
    <label>Accepted Job Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>