unpackaged/main/default/objects/Order_Erp__c/fields/AcceptedPartValue__c.field-meta.xml
<CustomField>
    <fullName>AcceptedPartValue__c</fullName>
    <label>Accepted Part Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>