unpackaged/main/default/objects/Order_Erp__c/fields/Account_Domain__c.field-meta.xml
<CustomField>
    <fullName>Account_Domain__c</fullName>
    <description>The domain associated with the email address of who placed the order.</description>
    <label>Account Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>