unpackaged/main/default/objects/Order_Erp__c/fields/Account_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Rep__c</fullName>
    <formula>AccountID__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Rep</label>
    <type>Text</type>
</CustomField>