unpackaged/main/default/objects/Order_Erp__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account that the order is placed for.</description>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Orders_Erp</relationshipName>
    <type>Lookup</type>
</CustomField>