unpackaged/main/default/objects/Order_Erp__c/fields/AdditionalRequirements__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRequirements__c</fullName>
    <inlineHelpText>Only 255 characters shown for processing reasons</inlineHelpText>
    <label>Additional Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>