unpackaged/main/default/objects/Order_Erp__c/fields/AllOrdersTotal__c.field-meta.xml
<CustomField>
    <fullName>AllOrdersTotal__c</fullName>
    <description>The total of all non-cancelled child orders and parent order.</description>
    <label>All Orders Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>