unpackaged/main/default/objects/Order_Erp__c/fields/Bad_Outcomes_Highest_Probability__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcomes_Highest_Probability__c</fullName>
    <label>Bad Outcomes Highest Probability</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>