unpackaged/main/default/objects/Order_Erp__c/fields/Bad_Outcomes_Manage_Result__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcomes_Manage_Result__c</fullName>
    <label>Bad Outcomes Manage Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily Score Not Calculated Yet</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Do Not Manage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>