unpackaged/main/default/objects/Order_Erp__c/fields/Bad_Outcomes_Type__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcomes_Type__c</fullName>
    <label>Bad Outcomes Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>