unpackaged/main/default/objects/Order_Erp__c/fields/Bookings_Total__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Total__c</fullName>
    <formula>Order_Subtotal__c - Discount__c - Redeemed_Points_Value__c +  Shipping__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>