unpackaged/main/default/objects/Order_Erp__c/fields/CaseManager__c.field-meta.xml
<CustomField>
    <fullName>CaseManager__c</fullName>
    <label>Case Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>