unpackaged/main/default/objects/Order_Erp__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>