unpackaged/main/default/objects/Order_Erp__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Orders_Erp</relationshipName>
    <type>Lookup</type>
</CustomField>