unpackaged/main/default/objects/Order_Erp__c/fields/containsCustomFinish__c.field-meta.xml
<CustomField>
    <fullName>containsCustomFinish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this order have at least one part with a custom finish?</description>
    <label>Contains Custom Finish?</label>
    <type>Checkbox</type>
</CustomField>