unpackaged/main/default/objects/Order_Erp__c/fields/Customer_First_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Order__c</fullName>
    <formula>ContactID__r.Contact_s_Date_of_First_Order__c =  Order_ERP_CreatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer First Order?</label>
    <type>Checkbox</type>
</CustomField>