unpackaged/main/default/objects/Order_Erp__c/fields/Customer_First_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Order_Owner__c</fullName>
    <formula>OpportunityID__r.Commission_Owner_LKP__r.Full_Name__c</formula>
    <label>Customer First Order Owner</label>
    <type>Text</type>
</CustomField>