unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_Country__c</fullName>
    <label>ERP Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>