unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Billing_State_or_Province__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_State_or_Province__c</fullName>
    <label>ERP Billing State or Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>