unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Company_Name__c</fullName>
    <label>ERP Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>