unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Contact__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact__c</fullName>
    <inlineHelpText>Search for this contact  in the ERP to see more information about the contact.</inlineHelpText>
    <label>ERP Contact</label>
    <length>6</length>
    <type>Text</type>
</CustomField>