unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_First_Name__c</fullName>
    <description>The first name of the contact who placed the order.</description>
    <label>ERP Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>