unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Last_Name__c</fullName>
    <description>Last Name of the Customer who placed the Order.</description>
    <label>ERP Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>