unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Contact_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Phone_Ext__c</fullName>
    <label>ERP Contact Phone Ext</label>
    <length>25</length>
    <type>Text</type>
</CustomField>