unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Order_Last_ModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Last_ModifiedDate__c</fullName>
    <description>Last time that the Order had a field changed in the ERP.</description>
    <label>Last Order Modification Date</label>
    <type>Date</type>
</CustomField>