unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Order_Search_Url__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Search_Url__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/quotes-orders?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=4&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D="+Xometry_ERP_ID__c+"&amp;n_columns=19","Go to this Order in the ERP Quote and Orders", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Order Search Url</label>
    <type>Text</type>
</CustomField>