unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Order_Url__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Url__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/orders/"+ Xometry_ERP_ID__c ,"Go to this Order in the ERP","_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Order Url</label>
    <type>Text</type>
</CustomField>