unpackaged/main/default/objects/Order_Erp__c/fields/ERP_PartPk__c.field-meta.xml
<CustomField>
    <fullName>ERP_PartPk__c</fullName>
    <description>A concatenation of all parts that were used to create an order.</description>
    <label>ERP PartPk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>