unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>ERP_Shipping_Address__c</fullName>
    <label>ERP Shipping Address</label>
    <type>TextArea</type>
</CustomField>