unpackaged/main/default/objects/Order_Erp__c/fields/ERP_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Status__c</fullName>
    <label>ERP Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>