unpackaged/main/default/objects/Order_Erp__c/fields/EUD_HasCase__c.field-meta.xml
<CustomField>
    <fullName>EUD_HasCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[MISSING EUD] Has Case?</label>
    <type>Checkbox</type>
</CustomField>