unpackaged/main/default/objects/Order_Erp__c/fields/EUD_HTSCode__c.field-meta.xml
<CustomField>
    <fullName>EUD_HTSCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[MISSING EUD] HTS Code</label>
    <type>Checkbox</type>
</CustomField>