unpackaged/main/default/objects/Order_Erp__c/fields/EUD_ImportReason__c.field-meta.xml
<CustomField>
    <fullName>EUD_ImportReason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[MISSING EUD] Import Reason</label>
    <type>Checkbox</type>
</CustomField>