unpackaged/main/default/objects/Order_Erp__c/fields/EUD_Industry__c.field-meta.xml
<CustomField>
    <fullName>EUD_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[MISSING EUD] Industry</label>
    <type>Checkbox</type>
</CustomField>