unpackaged/main/default/objects/Order_Erp__c/fields/EUD_LineItemBreakdown__c.field-meta.xml
<CustomField>
    <fullName>EUD_LineItemBreakdown__c</fullName>
    <label>[MISSING EUD] Line Item Breakdown</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>