unpackaged/main/default/objects/Order_Erp__c/fields/EUD_MissingEndUseData__c.field-meta.xml
<CustomField>
    <fullName>EUD_MissingEndUseData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[MISSING EUD] Missing End Use Data</label>
    <type>Checkbox</type>
</CustomField>