unpackaged/main/default/objects/Order_Erp__c/fields/EUD_PartDescription__c.field-meta.xml
<CustomField>
    <fullName>EUD_PartDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[MISSING EUD] Part Description</label>
    <type>Checkbox</type>
</CustomField>