unpackaged/main/default/objects/Order_Erp__c/fields/Get_2D_Order_URL__c.field-meta.xml
<CustomField>
    <fullName>Get_2D_Order_URL__c</fullName>
    <formula>HYPERLINK("https://get.xometry.com/rfq/review/"+Xometry_ERP_ID__c ,"Go to this Quote in the Get Site", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get 2D Order URL</label>
    <type>Text</type>
</CustomField>