unpackaged/main/default/objects/Order_Erp__c/fields/Get_Xom_Order_Url__c.field-meta.xml
<CustomField>
    <fullName>Get_Xom_Order_Url__c</fullName>
    <formula>HYPERLINK("https://get.xometry.com/quote/"+  Xometry_ERP_ID__c  ,"Go to this order in the Get Site", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Order Url</label>
    <type>Text</type>
</CustomField>