unpackaged/main/default/objects/Order_Erp__c/fields/Is_Generic__c.field-meta.xml
<CustomField>
    <fullName>Is_Generic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean to flag if the order is associated with a generic email or not.</description>
    <label>Is Generic</label>
    <type>Checkbox</type>
</CustomField>