unpackaged/main/default/objects/Order_Erp__c/fields/Last_Account_Activity_AM__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Activity_AM__c</fullName>
    <formula>ENCODED:{!ID:00N3u00000PBHqv.ActivityMetric.LastActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Account Activity Am</label>
    <type>Date</type>
</CustomField>