unpackaged/main/default/objects/Order_Erp__c/fields/Last_Contact_Activity_AM__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Activity_AM__c</fullName>
    <formula>ENCODED:{!ID:00N3u00000PBHqy.ActivityMetric.LastActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Contact Activity AM</label>
    <type>Date</type>
</CustomField>