unpackaged/main/default/objects/Order_Erp__c/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Orders_Erp</relationshipName>
    <type>Lookup</type>
</CustomField>