unpackaged/main/default/objects/Order_Erp__c/fields/Manufacturing_Process__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Process__c</fullName>
    <formula>OpportunityID__r.Manufacturing_Process__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturing Process</label>
    <type>Text</type>
</CustomField>