unpackaged/main/default/objects/Order_Erp__c/fields/Material_Cert__c.field-meta.xml
<CustomField>
    <fullName>Material_Cert__c</fullName>
    <label>Material Cert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>