unpackaged/main/default/objects/Order_Erp__c/fields/Material_Traceability_Cert__c.field-meta.xml
<CustomField>
    <fullName>Material_Traceability_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Traceability Cert</label>
    <type>Checkbox</type>
</CustomField>