unpackaged/main/default/objects/Order_Erp__c/fields/MKP_PartnerId__c.field-meta.xml
<CustomField>
    <fullName>MKP_PartnerId__c</fullName>
    <label>Partner Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>