unpackaged/main/default/objects/Order_Erp__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Orders_Erp</relationshipName>
    <type>Lookup</type>
</CustomField>