unpackaged/main/default/objects/Order_Erp__c/fields/Ops_Order__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Orders ERP</relationshipLabel>
    <relationshipName>Orders_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>