unpackaged/main/default/objects/Order_Erp__c/fields/Order_Canceled_Flag__c.field-meta.xml
<CustomField>
    <fullName>Order_Canceled_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag that shows that an order has been canceled.</description>
    <label>Order Canceled Flag</label>
    <type>Checkbox</type>
</CustomField>