unpackaged/main/default/objects/Order_Erp__c/fields/Order_Close_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Order_Close_to_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Close to Ship</label>
    <type>Checkbox</type>
</CustomField>