unpackaged/main/default/objects/Order_Erp__c/fields/Order_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Email__c</fullName>
    <description>The email address that was used to place the order.</description>
    <label>Order Email</label>
    <type>Email</type>
</CustomField>