unpackaged/main/default/objects/Order_Erp__c/fields/Order_ERP_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Order_ERP_CreatedDate__c</fullName>
    <description>Date that an order was placed.</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>