unpackaged/main/default/objects/Order_Erp__c/fields/Order_ERP_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_ERP_Time__c</fullName>
    <label>Order Time</label>
    <type>DateTime</type>
</CustomField>