unpackaged/main/default/objects/Order_Erp__c/fields/Order_ERP_Time_C__c.field-meta.xml
<CustomField>
    <fullName>Order_ERP_Time_C__c</fullName>
    <description>Time that an Order is placed according to the ERP.</description>
    <label>[DEPRECATED] Order Time</label>
    <type>DateTime</type>
</CustomField>