unpackaged/main/default/objects/Order_Erp__c/fields/Order_is_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Order_is_Past_Due__c</fullName>
    <formula>IF( OR( ERP_Status__c = 'Completed' ,ERP_Status__c = 'Vendor Completed' ),

'Order is Shipped',

IF( OrderDueDate__c &lt; TODAY() ,

'Order is Overdue by ' &amp; TEXT(Order_OverDue_Flag__c) &amp; ' days',

IF( OrderDueDate__c = TODAY(), 'Order is not due yet', 'Order is not due yet - Due in ' &amp; TEXT(ABS(Order_OverDue_Flag__c)) &amp; ' days')

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order is Past Due</label>
    <type>Text</type>
</CustomField>