unpackaged/main/default/objects/Order_Erp__c/fields/Order_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Order_Subtotal__c</fullName>
    <label>Order Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>