unpackaged/main/default/objects/Order_Erp__c/fields/OrderDueDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDueDate__c</fullName>
    <label>Order Due Date</label>
    <type>Date</type>
</CustomField>