unpackaged/main/default/objects/Order_Erp__c/fields/Ordered_Total_Amt_PolyJet3D__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Total_Amt_PolyJet3D__c</fullName>
    <label>Ordered Total Amt PolyJet3D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>