unpackaged/main/default/objects/Order_Erp__c/fields/Ordered_Total_Qty_Carbon__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Total_Qty_Carbon__c</fullName>
    <label>Ordered Total Qty Carbon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>